# quick_start_django

./: Makefile  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: admin.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
