[tool.poetry]
name = "quick-start-django"
version = "0.1.0"
description = ""
authors = ["qqKazakov <leap74rus@gmail.com>"]
readme = "README.md"
packages = [{include = "quick_start_django"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
flake8 = "^6.0.0"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
